--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,16 @@
 {
   "name": "polymer-unit-convert",
   "dependencies": {
-    "polymer": "polymer/polymer",
+    "polymer": "~1.0.5",
     "polymer-unit-prefix": "gronke/polymer-unit-prefix"
   },
   "devDependencies": {
-    "test-fixture": "polymerelements/test-fixture#^0.8.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#~0.6.0",
+    "test-fixture": "polymerelements/test-fixture#^1.0.0",
+    "webcomponentsjs": "webcomponents/webcomponentsjs#~0.7.2",
     "paper-styles": "PolymerElements/paper-styles",
     "prism-element": "PolymerElements/prism-element",
     "hydrolysis": "Polymer/hydrolysis",
-    "web-component-tester": "~2.2.3",
+    "web-component-tester": "~3.2.0",
     "marked-element": "PolymerElements/marked-element"
   },
   "homepage": "https://github.com/gronke/polymer-unit-convert/",
